fix some layout bugs

--- a/assets/app/app.sass
+++ b/assets/app/app.sass
@@ -53,6 +53,9 @@ $icons2x: sprite-map("icons2x/*.png")
 // Specific page customization
 ///////////////////////////////////////////////////////////////////
 
+#content
+  margin-top: 18px
+
 header.main
   .current-user
     padding-top: 12px
